[tool.poetry]
name = "mobulook"
version = "0.1.0"
description = "Save and load Motionbuilder FBModelMarker look properties to json."
authors = ["Thibaud Gambier <thibaud.gambier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-isort = "^4.1.1"
flake8-docstrings = "^1.6.0"
mypy = "^0.941"
flake8-annotations = "^2.7.0"
darglint = "^1.8.1"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
